--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,10 @@ server.port=8888
 endpoint.url=http://gturnquist-quoters.cfapps.io/api/random
 connect.timeout=10000
 read.timeout=10000
+
+app.name=Gestion Commandes
+app.description=${app.name} vous permet de gérer l'ensemble de vos commandes clients; de leurs changer le statut et de les mettre à jour en temps réel.
+
+logging.level.root=WARN
+logging.level.org.springframework.web=DEBUG
+logging.level.org.hibernate=ERROR
